# Pico-GB

./: CMakeLists.txt  TODO.txt  main.c
include/: config.h  mk_ili9225.h  peanut_gb.h
morana/: CMakeLists.txt  config.h  display.c  display.h  morana.c  morana.h  sd_card.c  sd_card.h  sd_hw_config.c  sd_hw_config.h
morana/display/: display.h
morana/input/: buttons.c  buttons.h  controls.h
morana/libs/display/: CMakeLists.txt
morana/libs/display/gfx/: gfx.c
morana/libs/display/ili9341/: ili9341.c  ili9341.h
morana/libs/storage/FatFs_SPI/: CMakeLists.txt
morana/libs/storage/FatFs_SPI/ff15/source/: ffconf.h
morana/libs/storage/SD_unused/: CMakeLists.txt  hw_config.c
morana/src/: config.h  controls.c  controls.h  morana.c  morana.h  sd_card.c  sd_hw_config.h  types.h
morana/src/GUI/: gui_common.h  menu.c  menu.h  menu_item.h
morana/src/display/: display.c  display.h  display_bmp.c  display_bmp.h  display_shape.c  display_shape.h  display_txt.c  display_txt.h  ili9341.c  ili9341.h
morana/src/display/fonts/: font_basic.h  generate.py
src/: DuckTales.c  config.h  gbcolors.c  gbcolors.h  gfx_lcd.c  gfx_lcd.h  main.c  main.h  odkladiste.c  rom_selector.c  rom_selector.h  storage.c
src/display/: mk_ili9225.c
src/menu/: game_menu.c  game_menu.h  palette_menu.c  palette_menu.h  setting_menu.c  setting_menu.h
